--- a/shopping-app/src/style/GlobalStyle.scss
+++ b/shopping-app/src/style/GlobalStyle.scss
@@ -31,11 +31,10 @@ html *::-webkit-scrollbar-track {
 // }
 
 body {
-  font-family      : var(--font-family);
-  // font-size     : 1.6rem;
-  line-height      : 1.5;
-  text-rendering   : optimizespeed;
-  overflow-y       : overlay;
+  font-family   : var(--font-family);
+  line-height   : 1.5;
+  text-rendering: optimizespeed;
+  overflow-y    : overlay;
 }
 
 a {
@@ -98,3 +97,7 @@ a {
 }
 
 //End Cart
+
+.border-bottom {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+}
